Api Update (#3)
* feat: update response for addOrg and openAPI spec file

* feat(api): Add Organisation delete route and updated spec file

* feat(api): Updated addOrgRoute to add ADMIN as orgMember
